@@ -3,6 +3,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 next:
           - autocomplete custom variables values if exposed by show_custom_vars
           - make custom variables available in host/service excel export
+          - write details into apache log on timeouts
           - fix filtering for empty custom variables
           - fix problems favicon counter
 
